Added code to create midi ports, endpoints etc.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 MIDI Middle Man.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 
 MIDI Middle Man.xcodeproj/project.xcworkspace/xcuserdata/*.xcuserdatad/
+
+MIDI Middle Man.xcodeproj/xcuserdata/Joe.Noel.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
+
+MIDI Middle Man.xcodeproj/xcuserdata/Joe.Noel.xcuserdatad/xcschemes/MIDI Middle Man.xcscheme
