--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ MIDI Middle Man.xcodeproj/xcuserdata/Joe.Noel.xcuserdatad/xcschemes/MIDI Middle 
 MIDI Middle Man.xcodeproj/xcuserdata/joenoel.xcuserdatad/xcschemes/MIDI Middle Man.xcscheme
 
 MIDI Middle Man.xcodeproj/xcuserdata/joenoel.xcuserdatad/xcschemes/xcschememanagement.plist
+
+Sketch Overview.graffle
